bk_ida/gccida/g0/regclass_compatible_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:551:26: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
|| reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                         ^~~~~~~~~
                         regclass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:551:36: error: expected ')'
|| reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:551:22: note: to match this '('
|| reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:559:26: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
|| reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) 
                         ^~~~~~~~~
                         regclass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:559:36: error: expected ')'
|| reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/regmove.c:559:22: note: to match this '('
|| reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regclass_compatible_p/src/obj/regmove.o] Error 1
